//building proto schema

//protocol buffer version
syntax = "proto3";

//define package
//package can include multiple services
package literaryPackage;

//building service
//methods take in some param, returns some param
//createAuthor returns an author (name string)
service AuthorService {
  rpc createAuthor (Author) returns (Author);
  rpc getAuthors (noParams) returns (Authors);
  rpc editAuthor (Author) returns (Author);
  rpc deleteAuthor (Author) returns (Author);
}

//defining data schema
message noParams {}

message Author {
  int32 id = 1;
  string name = 2;
}

message Authors {
  repeated Author authors = 1;
}
